--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header">
         <a href="#">
-            <img src="./assets/netflixlogo.png" alt="">
+            <img height="45px" width="167px" src="./assets/netflixlogo.png" alt="">
         </a>
     </div>
 
@@ -36,7 +36,7 @@
             </div>
 
             <div class="cardFooter">
-                <span><img src="./assets/Facebook_logo.png" alt=""></span>
+                <span><img height="30px" src="./assets/Facebook_logo.png" alt=""></span>
                 <span>Conectar com o Fecebook</span>
 
                 <div class="signUp">
