--- a/index.html
+++ b/index.html
@@ -29,18 +29,21 @@
                     <span><input type="checkbox"></span>
                     <span>Lembre-se de min</span>
                 </div>
+
+                <div class="help">
+                    <a href="">precisa de ajudar ?</a>
+                </div>
             </div>
 
-            <div class="help">
-                <a href="">precisa de ajudar ?</a>
-            </div>
 
             <div class="cardFooter">
-                <span><img height="30px" src="./assets/Facebook_logo.png" alt=""></span>
-                <span>Conectar com o Fecebook</span>
+                <div class="loginFecebook">
+                    <span><img height="25px" src="./assets/Facebook_logo.png" alt=""></span>
+                    <span><a href="#">Conectar com o Fecebook</a></span>
+                </div>
 
                 <div class="signUp">
-                    <p>Novo por aqui ?<a href="#">Assine Agora</a></p>
+                    <p>Novo por aqui ? <a href="#">Assine Agora</a></p>
                 </div>
     
                 <div class="terms">
