--- a/LEAGUE OF LEGENDS/index.html
+++ b/LEAGUE OF LEGENDS/index.html
@@ -32,14 +32,14 @@
                     <input type="text" name="NAME" placeholder="nome de usuário" >
                     <input type="password" name="PASSWORD" placeholder="senha">
     
-                    <div>
-                        <div class="network">
-                            <img src="./src/assets/Facebook.png" alt="">
+                    <div class="midia-box">
+                        <div class="midia-card fecebook">
+                            <img id="fecebook" src="./src/assets/Facebook.png" alt="">
                         </div>
-                        <div class="network">
+                        <div class="midia-card google">
                             <img src="./src/assets/Google.png" alt="">
                         </div>
-                        <div class="network">
+                        <div class="midia-card apple">
                             <img src="./src/assets/Apple.png" alt="">
                         </div>
                     </div>
