--- a/LEAGUE OF LEGENDS/index.html
+++ b/LEAGUE OF LEGENDS/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="stylesheet" href="./src/css/responsividade.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="container" >
@@ -51,7 +54,7 @@
     
                     <div class="button-start">
                         <button>
-                            <img src="./src/assets/Seta-esquerda.png" alt="">
+                            <img src="./src/assets/Seta-direita.png" alt="">
                         </button>
                     </div>
                     
@@ -75,10 +78,10 @@
 
                 <div class="option">
                     <div class="information">
-                        <img src="./src/assets/Exclamacao.png" alt="">
+                        <img class="square" src="./src/assets/Exclamacao.png" alt="">
                     </div>
                     <div class="settings">
-                        <img src="./src/assets/Perfil.png" alt="">
+                        <img class="square-02" src="./src/assets/Perfil.png" alt="">
                     </div>
                 </div>
 
