--- a/LEAGUE OF LEGENDS/index.html
+++ b/LEAGUE OF LEGENDS/index.html
@@ -78,7 +78,9 @@
 
                 <div class="option">
                     <div class="information">
-                        <img class="square" src="./src/assets/Exclamacao.png" alt="">
+                        <div class="exclamacao">
+                            <img class="square" src="./src/assets/Exclamacao.png" alt="">
+                        </div>
                     </div>
                     <div class="settings">
                         <img class="square-02" src="./src/assets/Perfil.png" alt="">
