--- a/LEAGUE OF LEGENDS/index.html
+++ b/LEAGUE OF LEGENDS/index.html
@@ -69,7 +69,7 @@
                 
             </section>
 
-            <section class="layout">
+            <section id="fundo" class="layout" mouseover="changeBackGround()">
 
                 <div class="icone-out">
                     <img src="./src/assets/icone-.png" alt="">
@@ -77,11 +77,31 @@
                 </div>
 
                 <div class="option">
+
                     <div class="information">
-                        <div class="exclamacao">
-                            <img class="square" src="./src/assets/Exclamacao.png" alt="">
+                        <div class="informationIcon">
+                            <div class="exclamacao">
+                                <img class="square" src="./src/assets/Exclamacao.png" alt="">
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <h2>transferências de conta indisponíveis</h2>
+                                <p class="data">22/09/2021 13:49</p>
+                                <p>As transferências de conta estão indisponíveis enquanto trabalhamos na solução de um problema.</p>
+                            </div>
+                            <div>
+                                <h2>Presentes</h2>
+                                <p class="data">12/05/2021 19:03</p>
+                                <p>Presentes de conteúdo (campeões, skins, etc) estão temporariamente indisponíveis enquanto trabalhamos na solução de um problema. Presentes de RP podem ser enviados normalmente.</p>
+                            </div>
+
+                            <div>
+                                <a href="https://status.riotgames.com/?locale=pt_BR" target="_blank">mais detalhes</a>
+                            </div>
                         </div>
                     </div>
+
                     <div class="settings">
                         <img class="square-02" src="./src/assets/Perfil.png" alt="">
                     </div>
@@ -91,6 +111,6 @@
 
          </main>
     </section>
-    
+    <script src="./src/js/script.js"></script>
 </body>
 </html>
